# Test-FastAPI

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
app/: application.py  auth.py  user.py
core/: config.py  exceptions.py
db/: application.py  base.py  user.py
db/alembic/: env.py
dto/: application.py  auth.py  static_types.py  user.py
services/: otp.py
usecases/: application.py  auth.py  user.py
utils/: aioclient.py  log.py  middlewares.py
